force-app/main/default/objects/Campaign/fields/Merch_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Merch_Quantity__c</fullName>
    <label>Merch Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>