force-app/main/default/objects/Campaign/fields/Show_ID__c.field-meta.xml
<CustomField>
    <fullName>Show_ID__c</fullName>
    <label>Show ID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>